Fixed alignment of scrolling bar

--- a/style.css
+++ b/style.css
@@ -339,19 +339,19 @@ body {
 }
 
 .range__labels__item--2 {
-	left: 20%;
+	left: 22%;
 }
 
 .range__labels__item--3 {
-	left: 40%;
+	left: 42%;
 }
 
 .range__labels__item--4 {
-	left: 60%;
+	left: 58%;
 }
 
 .range__labels__item--5 {
-	left: 80%;
+	left: 78%;
 }
 
 .range__labels__item--6 {
